added active class

--- a/comp2007lab2/Web.config
+++ b/comp2007lab2/Web.config
@@ -7,6 +7,11 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
+  <pages>
+    <controls>
+      <add tagPrefix="bs3" tagName="jumbotron" src="~/UserControls/jumbotron.ascx"></add>
+    </controls>
+  </pages>
   </system.web>
   <system.codedom>
     <compilers>
@@ -18,4 +23,5 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  
 </configuration>
